--- a/Continuous Slope.vbproj
+++ b/Continuous Slope.vbproj
@@ -117,6 +117,12 @@
     <Compile Include="frmHorizontalcontinuousoutput.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmHorizontalseparate.Designer.vb">
+      <DependentUpon>frmHorizontalseparate.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmHorizontalseparate.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmMain.Designer.vb">
       <DependentUpon>frmMain.vb</DependentUpon>
     </Compile>
@@ -179,6 +185,9 @@
   <ItemGroup>
     <EmbeddedResource Include="frmHorizontalcontinuousoutput.resx">
       <DependentUpon>frmHorizontalcontinuousoutput.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmHorizontalseparate.resx">
+      <DependentUpon>frmHorizontalseparate.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.vb</DependentUpon>
